# uBO2privoxy

./: privacy_list_urls.txt  pyproject.toml  ubo2privoxy-example.action  ubo2privoxy.py
ubo2privoxy_lib/: __init__.py  grammar.py  parser.py
